# RustyRemoteSupport

./: Build.md  README.md
client/: Cargo.toml
client/src/: bevy_engine.rs  lib.rs  seed_ui.rs
server/: Cargo.toml
server/src/: main.rs
server/www/static/: index.html
shared/: Cargo.toml
shared/src/: lib.rs
