[package]
name = "server"
version = "0.1.0"
authors = ["cviot <viot.camille@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2", features = ["macros"] }
shared = { path = "../shared" }